<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_username_label"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="user@email.com"
        android:background="@color/color_gray_bg"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etNameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/bg_search_rounded"
        android:layout_marginBottom="24dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLogoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/color_red_logout"/>

</LinearLayout>